# nightd-nightlive-demo

./: .gitignore  README.md  dbt_project.yml  mise.toml  profiles.yml  pyproject.toml
images/: entity_relationships.mmd
models/: sources.yml
seeds/: artists.csv  bar_transactions.csv  bookings.csv  door_entries.csv  events.csv  lineup_slots.csv  payouts.csv  sound_checks.csv  tickets.csv  venues.csv
seeds_b/: artists.csv  bar_transactions.csv  bookings.csv  door_entries.csv  events.csv  lineup_slots.csv  payouts.csv  sound_checks.csv  tickets.csv  venues.csv
tests/: assert_all_event_references_consistent_venue.sql  assert_artist_ledger_complete.sql  assert_bar_drink_prices_in_menu.sql  assert_bar_transactions_within_event_hours.sql  assert_bar_venue_matches_event_venue.sql  assert_booking_fee_matches_lineup_fee.sql  assert_booking_payout_fees_balanced.sql  assert_capacity_never_exceeded.sql  assert_capacity_with_valid_venue.sql  assert_confirmed_bookings_no_payout.sql  assert_cost_to_revenue_ratio_in_range.sql  assert_door_entries_within_event_hours.sql  assert_door_entry_events_exist.sql  assert_door_entry_venue_matches_event_venue.sql  assert_entry_before_bar_transaction.sql  assert_entry_status_always_present.sql  assert_event_bar_revenue_proportion.sql  assert_event_covers_lineup_sets.sql  assert_event_dates_complete.sql  assert_event_duration_positive.sql  assert_event_end_within_venue_closing.sql  assert_event_start_before_first_entry.sql  assert_event_start_not_before_venue_opening.sql  assert_headliner_fee_at_least_3x_opener.sql  (+32 more)
(+36 files in other folders)
