[project]
name = "nightd-nightlive-demo"
version = "0.1.0"
description = "Nightlife platform managing clubs, events, DJs, ticket sales, door entry, bar transactions, artist bookings, and sound system logistics."
authors = [
    { name = "Jan Ehrhardt" },
    { name = "Florian Stefan" },
]
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.6",
    "dbt-duckdb>=1.10.1",
]
